<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mp3music.Payments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/library"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nowplaying" />

        <Button
            android:id="@+id/playlist_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playlist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment" />

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Song name: Pagg Wala Munda" />


        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Album name: Ambarsariya" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/net"
            style="@style/mode"
            android:text="@string/pay1" />

        <Button
            android:id="@+id/card"
            style="@style/mode"
            android:text="@string/pay2" />

        <Button
            android:id="@+id/paytm"
            style="@style/mode"
            android:text="@string/pay3" />
    </LinearLayout>

</LinearLayout>
