<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mp3music.Playlist">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/library"
            style="@style/playlist"
            android:text="@string/nowplaying" />

        <Button
            android:id="@+id/playlist_button"
            style="@style/playlist"
            android:text="@string/playlist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/below_library"
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#BDBDBD"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#424242"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/playlist_controls"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="55dp">


        <ImageView
            android:id="@+id/image_view"
            android:layout_width="150dp"
            android:layout_height="1500dp"
            android:background="@drawable/diljit" />

        <TextView
            android:id="@+id/playlist_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:text="@string/playlist_info"
            android:textColor="#000000"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playlist_info">

            <Button
                android:id="@+id/addsong"
                style="@style/button"
                android:layout_marginLeft="155dp"
                android:layout_marginRight="5dp"
                android:onClick="addsong"
                android:text="@string/add" />

            <Button
                android:id="@+id/buy"
                style="@style/button"
                android:layout_marginRight="5dp"
                android:onClick="buy"
                android:text="@string/buy" />

        </LinearLayout>

    </RelativeLayout>


    <ListView
        android:id="@+id/playlist_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlist_controls"
        android:layout_marginTop="10dp"></ListView>

</RelativeLayout>