<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mp3music.MainActivity">

    <LinearLayout style="@style/main">

        <Button
            android:id="@+id/library"
            style="@style/heading"
            android:text="@string/nowplaying" />

        <Button
            android:id="@+id/playlist_button"
            style="@style/heading"
            android:text="@string/playlist" />
    </LinearLayout>

    <LinearLayout style="@style/main">

        <TextView
            android:id="@+id/below_library"
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#424242"
            android:text="@string/nowplaying"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#BDBDBD"
            android:text="@string/playlist"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#000000"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="6"
        android:background="@drawable/diljit" />

    <TextView
        android:id="@+id/song_name"
        style="@style/main"
        android:layout_below="@+id/image_view"
        android:layout_marginTop="5dp"
        android:text="@string/song_name"
        android:textAlignment="center"
        android:textColor="#616161"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/album_name"
        style="@style/main"
        android:layout_below="@id/song_name"
        android:text="@string/album_name"
        android:textAlignment="center"
        android:textColor="#9E9E9E"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/seek_back"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#CDD5DF" />

        <TextView
            android:id="@+id/seek_front"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#3f51b5" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_front"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/start_time"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/seek_front"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/end_time"
            android:textColor="#000000"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings"
            style="@style/tools"
            android:src="@drawable/settings" />

        <ImageView
            android:id="@+id/back_button"
            style="@style/tools"
            android:src="@drawable/rewind" />

        <ImageView
            android:id="@+id/pause"
            style="@style/tools"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/next"
            style="@style/tools"
            android:src="@drawable/forward" />

        <ImageView
            android:id="@+id/equalizer"
            style="@style/tools"
            android:src="@drawable/equalizer_icon" />
    </LinearLayout>

</LinearLayout>
