<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_equalizer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.android.mp3music.Equalizer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/library"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nowplaying" />

        <Button
            android:id="@+id/playlist_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playlist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Equalizer"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView style="@style/equilizer" />

            <TextView style="@style/equilizer2" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="#424242" />

            <TextView
                style="@style/equilizer1"
                android:text="BASS SOUND" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView style="@style/equilizer" />

            <TextView style="@style/equilizer2" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="#424242" />


            <TextView
                style="@style/equilizer1"
                android:text="BASE SOUND" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView style="@style/equilizer" />

            <TextView style="@style/equilizer2" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="#424242" />

            <TextView
                style="@style/equilizer1"
                android:text="SURROUND " />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:text="@string/equalizer_info"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />
</LinearLayout>
